# anvaya

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  publish.yml
anvaya/: __init__.py  algebra.py  calculus.py  complex_analysis.py  differential_equations.py  discrete.py  graph_theory.py  linear_algebra.py  number_theory.py  numerical.py  optimization.py  probability.py  statistics.py  symbolic.py  vector_calculus.py
anvaya/core/: __init__.py  exceptions.py  types.py
docs/: algebra.md  calculus.md  complex_analysis.md  differential_equations.md  discrete.md  errors.md  graph_theory.md  index.md  installation.md  linear_algebra.md  number_theory.md  numerical.md  optimization.md  probability.md  quickstart.md  statistics.md  symbolic_engine.md  vector_calculus.md
docs/api_reference/: algebra.md  calculus.md  complex_analysis.md  differential_equations.md  discrete.md  graph_theory.md  index.md  linear_algebra.md  number_theory.md  numerical.md  optimization.md  probability.md  statistics.md  symbolic.md  vector_calculus.md
tests/: audit.py  conftest.py  test_anvaya.py
